# libstx

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.cmake  HACKING.md  LICENSE  Makefile  README.md  TODO  TODO.md  envvars  fnord-api-adaptions.md  fnord-convergence.md  fnord2cortex.sh  fnord2xzero.sh  libxzero.pc.cmake
examples/: CMakeLists.txt  compress.cpp  echo-server.cpp  echo-server2.cpp  http-exceptions.cpp  http-hello1.cpp  http-post-body.cpp  http-service.cpp  http-staticfile.cpp  http-threaded-blocking.cpp  http-threaded-handler-nbnio.cpp  http-threaded-nbnio.cpp  threaded-executor.cpp
examples/cortex-base/: echo-server.cc  echo-server2.cc
examples/cortex-http/: http-exceptions.cc  http-hello1.cc  http-post-body.cc  http-service.cc  http-staticfile.cc  http-threaded-blocking.cc  http-threaded-nbnio.cc
examples/xzero-base/: CMakeLists.txt  dns-resolver.cpp  echo-server.cpp  echo-server2.cpp  logging-simple.cpp  threaded-executor.cpp  udp-echo-server.cc
examples/xzero-http/: CMakeLists.txt  http-exceptions.cc  http-exceptions.cpp  http-hello1.cc  http-hello1.cpp  http-post-body.cc  http-post-body.cpp  http-service.cpp  http-staticfile.cpp  http-threaded-blocking.cpp  http-threaded-nbnio.cpp
fnord-fts/: Analyzer.cc  Analyzer.h  AnalyzerAdapter.cc  AnalyzerAdapter.h  CMakeLists.txt  FTSQuery.cc  FTSQuery.h  GermanStemmer.cc  GermanStemmer.h  Hunspell.cc  Hunspell.h  QueryAnalyzer.cc  QueryAnalyzer.h  SimpleTokenizer.cc  SimpleTokenizer.h  Stemmer.h  StopwordDictionary.cc  StopwordDictionary.h  SynonymDictionary.cc  SynonymDictionary.h  fts.h  fts_common.h
fnord-fts/analysis/: Analyzer.cc  Analyzer.h  TokenStream.cc  TokenStream.h
fnord-fts/index/: DocInverterPerField.h
fnord-fts/queryparser/: QueryParser.cc  QueryParser.h
fnord-fts/search/: TopDocs.cc  TopDocs.h
fnord-fts/store/: Lock.cc
fnord-fts/util/: FileUtils.cc  LuceneException.cc  LuceneException.h  boost_shared_ptr_adapter.h
libxzero/xzero-http/: Api.h  BadMessage.cc  BadMessage.h  CMakeLists.txt  HttpBufferedInput.h  HttpChannel.cc  HttpChannel.h  HttpConnectionFactory.h  HttpDateGenerator.cc  HttpDateGenerator.h  HttpHandler.h  HttpInfo.h  HttpInput.cc  HttpInputListener.h  HttpListener.cc  HttpListener.h  HttpMethod.h  HttpOutput.cc  HttpOutput.h  HttpRangeDef-test.cc  HttpRangeDef.h  HttpRequest.h  HttpResponse.cc  HttpService.h  sysconfig.h
xzero-base/: Api.h  Application.cc  Application.h  Base64-test.cc  Base64-test.cpp  Base64.cc  Base64.cpp  Base64.h  Buffer-test.cc  Buffer-test.cpp  Buffer.cc  Buffer.cpp  Buffer.h  CMakeLists.txt  CompletionHandler.h  CustomDataMgr.h  DateTime.cc  DateTime.cpp  DateTime.h  Defines.h  FlagParser.cpp  FlagParser.h  IEEE754.cc  IEEE754.h  IdleTimeout.cc  IdleTimeout.cpp  IdleTimeout.h  MimeTypes.cc  MimeTypes.cpp  MimeTypes.h  Option-test.cc  Option-test.cpp  Option.h  PrefixTree.h  Random.cc  Random.cpp  Random.h  RefCounted.h  RefPtr-test.cc  RefPtr.h  (+38 more)
xzero-base/cli/: CLI-test.cc  CLI-test.cpp  CLI.cc  CLI.cpp  CLI.h  FlagType.h  Flags.cc  Flags.cpp  Flags.h
xzero-base/executor/: DirectExecutor.cc  DirectExecutor.cpp  DirectExecutor.h  Executor.cc  Executor.h  NativeScheduler.h  PosixScheduler-test.cc  PosixScheduler-test.cpp  PosixScheduler.cc  PosixScheduler.cpp  PosixScheduler.h  SafeCall.cc  SafeCall.cpp  SafeCall.h  Scheduler.cc  Scheduler.h  ThreadPool-test.cc  ThreadPool-test.cpp  ThreadPool.cc  ThreadPool.cpp  ThreadPool.h  ThreadedExecutor.cc  ThreadedExecutor.h
xzero-base/hash/: FNV-test.cc  FNV.cc  FNV.cpp  FNV.h
xzero-base/io/: File.cc  File.cpp  File.h  FileDescriptor.cc  FileDescriptor.h  FileRef.cc  FileRef.h  FileRepository.cc  FileRepository.h  FileUtil.cc  FileUtil.cpp  FileUtil.h  Filter.cc  Filter.cpp  Filter.h  GzipFilter.cc  GzipFilter.h  InputStream.h  LocalFile.cc  LocalFile.cpp  LocalFile.h  LocalFileRepository.cc  LocalFileRepository.cpp  LocalFileRepository.h  MemoryFile-test.cc  MemoryFile.cc  MemoryFile.cpp  MemoryFile.h  MemoryFileRepository.cc  MemoryFileRepository.cpp  MemoryFileRepository.h  MemoryMap-test.cc  MemoryMap-test.cpp  MemoryMap.cc  MemoryMap.cpp  MemoryMap.h  OutputStream.h
xzero-base/logging/: LogAggregator.cc  LogAggregator.cpp  LogAggregator.h  LogLevel.cc  LogLevel.h  LogSource.cc  LogSource.cpp  LogSource.h  LogTarget.cc  LogTarget.cpp  LogTarget.h
xzero-base/net/: ByteArrayEndPoint-test.cc  ByteArrayEndPoint.cc  ByteArrayEndPoint.cpp  ByteArrayEndPoint.h  Cidr-test.cc  Cidr-test.cpp  Cidr.cc  Cidr.cpp  Cidr.h  Connection.cc  Connection.h  ConnectionFactory.cc  ConnectionFactory.cpp  ConnectionFactory.h  Connector.cc  Connector.h  DatagramConnector.cc  DatagramConnector.h  DatagramEndPoint.cc  DatagramEndPoint.h  DnsClient.cc  DnsClient.cpp  DnsClient.h  EndPoint.cc  EndPoint.cpp  EndPoint.h  EndPointWriter.cc  EndPointWriter.cpp  EndPointWriter.h  IPAddress.h  InetConnector.cc  InetConnector.cpp  InetConnector.h  InetEndPoint.cc  InetEndPoint.cpp  InetEndPoint.h  LocalConnector.cc  LocalConnector.cpp  LocalConnector.h  LocalDatagramConnector.cc  (+21 more)
xzero-flow/: AST.cc  AST.cpp  AST.h  ASTPrinter.h  ASTVisitor.h  Api.h  CMakeLists.txt  FlowCallVisitor.h  FlowLexer.cc  FlowLexer.h  FlowLocation.h  FlowParser.cpp  FlowParser.h  FlowToken.h  FlowType.h  IRGenerator.h  README.md  TargetCodeGenerator.h
xzero-http/: BadMessage.h  CMakeLists.txt  HeaderField.cc  HeaderField.h  HeaderFieldList.cc  HeaderFieldList.h  HttpBufferedInput.cc  HttpBufferedInput.cpp  HttpChannel.cc  HttpChannel.cpp  HttpChannel.h  HttpConnectionFactory.cc  HttpConnectionFactory.h  HttpDateGenerator.h  HttpFile.cpp  HttpFile.h  HttpFileHandler-test.cc  HttpFileHandler-test.cpp  HttpFileHandler.cpp  HttpFileHandler.h  HttpFileRepository.h  HttpInfo.h  HttpInput.h  HttpInputListener.h  HttpListener.h  HttpLocalFile.cpp  HttpLocalFile.h  HttpLocalFileRepository.cpp  HttpLocalFileRepository.h  HttpMemoryFile.cpp  HttpMemoryFile.h  HttpMemoryFileRepository.cpp  HttpMemoryFileRepository.h  HttpMethod.cpp  HttpMethod.h  HttpOutput.h  HttpOutputCompressor.cpp  HttpOutputCompressor.h  HttpRangeDef-inl.h  HttpRangeDef-test.cpp  (+20 more)
(+735 files in other folders)
